# Complete_the_Look_Recommendation_System

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  app.py  environment.yaml  environment.yml  pyproject.toml  streamlit_app.py
config/: config.py
configs/: data_prep.yaml  inference.yaml  train.yaml  train_multitask.yaml
dataset/: create_dataloader.py
dataset/data/: download_data.py
docs/: plan_multitask_street2shop_polyvore.md  plan_unified_multitask.md  polyvore.md  street2shop.md
features/: feature_extractor.py
src/: __init__.py  constants.py  recommend.py  recommend_cli.py  utils.py
src/Dataset/: Dataset.py  create_dataset.py
src/config/: __init__.py  config.py
src/data_pipeline/: __init__.py  data_preparation.py
src/dataloader/: __init__.py  data_loaders.py
src/dataset/: Dataloader.py  Dataset.py  create_dataloader.py
src/dataset/data/: download_data.py
src/features/: Embedding.py  FeatureExtractor.py  embeddings.py  feature_extractor.py
src/inference/: __init__.py  recommender.py  recommenders.py
src/losses/: loss_function.py
src/models/: Model.py  compatibility_trainer.py  evaluate.py  evaluation.py  recommend.py  trainer.py  training.py
src/recommendation_model/: recommend.py
src/schemas/: __init__.py  dataset_schemas.py
src/utils/: bounding_box.py  data_utils.py  image_utils.py  model_utils.py  show_images.py  similarity.py  similarity_main.py
utils/: FashionDataset.py  config.py  convert_data.py  download_data.py  make_data.py  product_features.pickle  show_images.py  similarity_main.py
